--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,8 @@
                         <li><a href="{% url 'register' %}"><i class="fa fa-user-plus"></i> Register</a></li>
                         <li><a href="{% url 'login' %}"><i class="fa fa-sign-in"></i> Log In</a></li>
                     {% endif %}
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i> Cart                        
-                        <label class="badge badge-light">{{ items_in_cart }}</label></a>
+                    <li><a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i> Cart                        
+                        <label class="badge badge-light">{{ number_of_items_in_cart }}</label></a>
                     </li>
                 </ul>
             </div>
