--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -26,7 +26,7 @@
             <form action="{% url 'add_to_cart' %}" method="post">
               {% csrf_token %}
               <input type="hidden" name="id" value="{{product.id}}"/>
-              <p><input type="hidden" name="quantity" value="1"/></p>
+              <p><input type="number" name="quantity" value="1"/></p>
               <p><input class="btn btn-success" type="submit" value="Add To Cart"/></p>
             </form>
           </div>
